public interface IMemento
{
    string GetState();

}